--- a/Dockerfile.mesh
+++ b/Dockerfile.mesh
@@ -16,10 +16,13 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy mesh source
 COPY notify.py/ /app/notify.py
-COPY mesh-gateway/ /app/mesh-gateway/
 COPY db/ /app/db/
 COPY scheduler.py /app/scheduler.py
 COPY server.py /app/server.py
+
+# Default SQLite location inside container
+ENV SQLITE_PATH=/data/mesh.db
+
 
 # Expose public mesh control API
 EXPOSE 8090
