--- a/nginx.conf
+++ b/nginx.conf
@@ -15,33 +15,41 @@ server {
     listen 443 ssl http2;
     server_name mesh.aditya-raman.com;
 
-    # TLS certs (certbot or DO)
-    ssl_certificate     /etc/letsencrypt/live/mesh.aditya-raman.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/mesh.aditya-raman.com/privkey.pem;
-
-    # SECURITY HEADERS
-    add_header X-Frame-Options DENY;
-    add_header X-Content-Type-Options nosniff;
-    add_header Referrer-Policy no-referrer-when-downgrade;
-    add_header Strict-Transport-Security "max-age=31536000" always;
-
-    # CORS — allow only portal domain
-    set $allowed_origin "";
-    if ($http_origin ~* "^https?://(www\.)?profile\.aditya-raman\.com$") {
-        set $allowed_origin $http_origin;
-    }
-
-    add_header Access-Control-Allow-Origin $allowed_origin;
+      # CORS temporary (allow all — tighten later)
+    add_header Access-Control-Allow-Origin *;
     add_header Access-Control-Allow-Credentials true;
     add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept";
     add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
 
-    if ($request_method = OPTIONS) {
-        return 204;
+    # TLS certs (certbot or DO)
+#    ssl_certificate     /etc/letsencrypt/live/mesh.aditya-raman.com/fullchain.pem;
+#    ssl_certificate_key /etc/letsencrypt/live/mesh.aditya-raman.com/privkey.pem;
+
+    # SECURITY HEADERS
+ #   add_header X-Frame-Options DENY;
+ #   add_header X-Content-Type-Options nosniff;
+ #   add_header Referrer-Policy no-referrer-when-downgrade;
+ #   add_header Strict-Transport-Security "max-age=31536000" always;
+
+ 
+
+    # CORS — allow only portal domain
+ #   set $allowed_origin "";
+#    if ($http_origin ~* "^https?://(www\.)?profile\.aditya-raman\.com$") {
+#        set $allowed_origin $http_origin;
     }
 
+#    add_header Access-Control-Allow-Origin $allowed_origin;
+#    add_header Access-Control-Allow-Credentials true;
+#    add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept";
+#    add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+
+#    if ($request_method = OPTIONS) {
+#        return 204;
+#    }
+
     # ROUTING to MCP Gateway (policy + RBAC)
-    location /api/mesh/ {
+    location / {
         proxy_pass http://mcp-gateway:8090/;
 
         proxy_set_header Host $host;
@@ -50,9 +58,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
 
         # WebSocket support
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+    #    proxy_http_version 1.1;
+    #    proxy_set_header Upgrade $http_upgrade;
+    #    proxy_set_header Connection "upgrade";
     }
 
     # HEALTH check endpoint for Droplet (optional)
