--- a/mesh-gateway/Dockerfile
+++ b/mesh-gateway/Dockerfile
@@ -13,4 +13,4 @@ ENV PYTHONUNBUFFERED=1
 
 EXPOSE 8090
 
-CMD ["uvicorn", "gateway:app", "--host", "0.0.0.0", "--port", "8090"]
+CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8090"]
