--- a/mcp-agent_health/Dockerfile
+++ b/mcp-agent_health/Dockerfile
@@ -7,11 +7,13 @@ RUN apt-get update && apt-get install -y sqlite3 && rm -rf /var/lib/apt/lists/*
 VOLUME ["/data"]
 
 
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY . ./app
 
+ENV PYTHONPATH=/app
 ENV PYTHONUNBUFFERED=1
 
 EXPOSE 8008
