fixed agnet-health with Dockerfile

--- a/mcp-agent_health/Dockerfile
+++ b/mcp-agent_health/Dockerfile
@@ -6,16 +6,16 @@ RUN apt-get update && apt-get install -y sqlite3 && rm -rf /var/lib/apt/lists/*
 
 VOLUME ["/data"]
 
-
-
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . ./app
+# ✅ Copy source properly
+COPY . .
 
 ENV PYTHONPATH=/app
 ENV PYTHONUNBUFFERED=1
 
 EXPOSE 8008
 
-CMD ["bash", "-c", "uvicorn server:app --host 0.0.0.0 --port 8008 & python agent.py"]
+# ✅ Ensure script exists & run app + scheduler
+CMD ["bash", "-c", "uvicorn server:app --host 0.0.0.0 --port 8008 & python /app/agent.py"]
