--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ server {
 
     # Forward all traffic to mcp-gateway
     location / {
-        proxy_pass http://mcp-gateway:8090/;
+        proxy_pass http://mesh-gateway:8090/;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
