moved scheduler a mcp-mesh activity rather than agnet

--- a/Dockerfile.mesh
+++ b/Dockerfile.mesh
@@ -19,6 +19,8 @@ COPY notify.py /app/notify.py
 COPY db/ /app/db/
 COPY scheduler.py /app/scheduler.py
 COPY server.py /app/server.py
+COPY mcp-client.py /app/mcp_client.py
+
 
 # Default SQLite location inside container
 ENV SQLITE_PATH=/data/mesh.db
@@ -38,5 +40,5 @@ CMD ["sh", "-c", "\
     fi; \
     echo 'Starting MCP Mesh Gateway + Scheduler...'; \
     uvicorn server:app --host 0.0.0.0 --port 8090 & \
-    python scheduler.py \
+    python /app/scheduler.py \
 "]
