--- a/Dockerfile.mesh
+++ b/Dockerfile.mesh
@@ -19,7 +19,7 @@ COPY notify.py /app/notify.py
 COPY db/ /app/db/
 COPY scheduler.py /app/scheduler.py
 COPY server.py /app/server.py
-COPY mcp-client.py /app/mcp_client.py
+COPY mcp_client.py /app/mcp_client.py
 
 
 # Default SQLite location inside container
