--- a/Dockerfile.mesh
+++ b/Dockerfile.mesh
@@ -15,7 +15,6 @@ COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy mesh source
-COPY notify.py /app/notify.py
 COPY db/ /app/db/
 COPY scheduler.py /app/scheduler.py
 COPY server.py /app/server.py
@@ -30,6 +29,7 @@ ENV SQLITE_PATH=/data/mesh.db
 EXPOSE 8090
 
 # Entrypoint (runs DB init + scheduler + API)
+# Entrypoint (runs DB init + API with integrated scheduler)
 CMD ["sh", "-c", "\
     if [ ! -f /data/mesh.db ]; then \
         echo 'Initializing SQLite DB...'; \
@@ -38,7 +38,7 @@ CMD ["sh", "-c", "\
     else \
         echo 'SQLite DB already exists'; \
     fi; \
-    echo 'Starting MCP Mesh Gateway + Scheduler...'; \
-    uvicorn server:app --host 0.0.0.0 --port 8090 & \
-    python /app/scheduler.py \
+    echo 'Starting MCP Mesh Core...'; \
+    # FIX: Run Uvicorn in the foreground (no '&' or 'python scheduler.py')
+    uvicorn server:app --host 0.0.0.0 --port 8090 \
 "]
