--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # Core API
 fastmcp
-fastapi==0.110.0
+fastapi
 uvicorn[standard]==0.27.1
 
 # HTTP client for calling MCP services
-httpx==0.27.0
+httpx
 
 # DB (SQLite) + utils
 sqlalchemy==2.0.29
@@ -29,5 +29,3 @@ openai==1.12.0
 
 # Logging utils
 rich==13.7.0
-
-requests
