--- a/mcp-agent_health/requirements.txt
+++ b/mcp-agent_health/requirements.txt
@@ -1,9 +1,9 @@
 
-fastapi==0.115.2
-uvicorn[standard]==0.30.6
-pydantic==2.9.2
+fastapi>=0.115.4
+uvicorn[standard]>=0.31.1
+pydantic>=2.11.7
 garminconnect==0.2.18
-python-dotenv==1.0.1
+python-dotenv>=1.0.1
 apscheduler
 httpx==0.27.2
 requests
