--- a/mcp-garmin/requirements.txt
+++ b/mcp-garmin/requirements.txt
@@ -1,6 +1,14 @@
 
-fastapi==0.115.2
-uvicorn[standard]==0.30.6
-pydantic==2.9.2
+#fastapi==0.115.2
+#uvicorn[standard]==0.30.6
+#pydantic==2.9.2
 garminconnect==0.2.18
 python-dotenv==1.0.1
+
+
+fastapi>=0.115.4
+uvicorn[standard]>=0.31.1
+
+pydantic>=2.11.7
+python-dotenv>=1.0.1
+
