--- a/mcp-linkedin/Dockerfile
+++ b/mcp-linkedin/Dockerfile
@@ -1,8 +1,15 @@
 FROM python:3.11-slim
 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    sqlite3 curl git && \
+    rm -rf /var/lib/apt/lists/*
+
+ENV PIP_NO_CACHE_DIR=1
+
 WORKDIR /app
 
 COPY requirements.txt .
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
