--- a/mcp-linkedin/requirements.txt
+++ b/mcp-linkedin/requirements.txt
@@ -1,6 +1,6 @@
 
-fastapi==0.115.2
-uvicorn[standard]==0.30.6
-pydantic==2.9.2
+fastapi>=0.115.4
+uvicorn[standard]>=0.31.1
+pydantic>=2.11.7
 requests==2.32.3
-python-dotenv==1.0.1
+python-dotenv>=1.0.1
