--- a/mesh-gateway/requirements.txt
+++ b/mesh-gateway/requirements.txt
@@ -1,7 +1,7 @@
 
-fastapi==0.115.2
-uvicorn[standard]==0.30.6
-pydantic==2.9.2
+fastapi>=0.115.4
+uvicorn[standard]>=0.31.1
+pydantic>=2.11.7
 PyYAML==6.0.2
 httpx==0.27.2
 python-dotenv
