--- a/mcp-agent_health/requirements.txt
+++ b/mcp-agent_health/requirements.txt
@@ -1,5 +1,5 @@
-
 fastapi>=0.115.4
+fastmcp==2.13.0
 uvicorn[standard]>=0.31.1
 pydantic>=2.11.7
 garminconnect==0.2.18
@@ -7,5 +7,3 @@ python-dotenv>=1.0.1
 apscheduler
 httpx==0.27.2
 requests
-fastmcp
-
