--- a/mcp-garmin/Dockerfile
+++ b/mcp-garmin/Dockerfile
@@ -12,6 +12,8 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+COPY ../notify.py .
+COPY ../templates/ ./templates/
 
 ENV PYTHONUNBUFFERED=1
 
