--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,45 @@
-# MCP Mesh Reverse Proxy (HTTP only first run)
+# MCP Mesh Reverse Proxy
 
+# Redirect HTTP to HTTPS
 server {
     listen 80;
     server_name mesh.aditya-raman.com;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name mesh.aditya-raman.com;
+
+    # --- IMPORTANT ---
+    # You must replace these placeholder paths with the actual paths to your SSL certificate and key files.
+    # You also need to mount these files into the nginx container using a volume in your docker-compose.yml.
+    ssl_certificate /etc/letsencrypt/live/mesh.aditya-raman.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/mesh.aditya-raman.com/privkey.pem;
 
     # temporary open CORS
     add_header Access-Control-Allow-Origin *;
     add_header Access-Control-Allow-Credentials true;
     add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept";
     add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+
+    # Block bots and sensitive files
+    location ~ /\.(git|env|htacccess|htpasswd|svn|bashrc|bash_profile)$ {
+        deny all;
+        return 404;
+    }
+    location ~* wlwmanifest\.xml$ {
+        deny all;
+        return 444;
+    }
+    location ~* xmlrpc\.php$ {
+        deny all;
+        return 444;
+    }
+    location ~* \.conf$ {
+        deny all;
+        return 404;
+    }
 
     if ($request_method = OPTIONS) {
         return 204;
