--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,6 @@ services:
       - meshdata:/data
     networks:
       - mcpnet
-    depends_on:
-      - mesh-gateway
 
   mesh-gateway:
     build: ./mesh-gateway
@@ -29,15 +27,21 @@ services:
       - mcpnet
 
   mcp-garmin:
-    build: ./mcp-garmin
+    build: 
+       context: .
+       dockerfile: mcp-garmin/Dockerfile
     container_name: mcp-garmin
     env_file: /opt/mcp-mesh/.env.mesh
     restart: unless-stopped
     networks:
       - mcpnet
+    depends_on:
+      - mesh-core
 
   mcp-nutrition:
-    build: ./mcp-nutrition
+    build:
+      context: .
+      dockerfile: mcp-nutrition/Dockerfile
     container_name: mcp-nutrition
     env_file: /opt/mcp-mesh/.env.mesh
     volumes:
@@ -54,6 +58,13 @@ services:
     restart: unless-stopped
     networks:
       - mcpnet
+  mcp-portal:
+     build: ./mcp-portal
+     container_name: mcp-portal
+     env_file: /opt/mcp-mesh/.env.mesh
+     restart: unless-stopped
+     networks:
+      - mcpnet        
 
   mcp-agent-health:
     build: ./mcp-agent_health
@@ -76,6 +87,8 @@ services:
     restart: unless-stopped
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt:ro  # Add this line
+
     ports:
       - "80:80"
       - "443:443"
