--- a/mcp-garmin/Dockerfile
+++ b/mcp-garmin/Dockerfile
@@ -9,10 +9,9 @@ ENV PIP_NO_CACHE_DIR=1
 WORKDIR /app
 
 COPY mcp-garmin/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
 
 # ADDED: Copy local DB helper
-COPY db.py .
+#COPY mcp-garmin/db.py .
 
 # ADDED: Copy files from the parent (project root) directory
 COPY notify.py .
@@ -20,6 +19,9 @@ COPY templates/ ./templates/
 
 # Moved to the end to ensure required files are present before copying all remaining
 COPY mcp-garmin/ .
+
+RUN pip install --no-cache-dir -r requirements.txt
+
 
 
 ENV PYTHONUNBUFFERED=1
