--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,3 @@
-fastmcp==2.13.0
-fastapi>=0.115.4
-uvicorn[standard]>=0.31.1
-
-httpx>=0.28.1
-sqlalchemy>=2.0.29
-sqlite-utils>=3.36
-sqlmodel>=0.0.14
-
-apscheduler==3.10.4
-
-pydantic>=2.11.7
-pydantic-settings>=2.6.1
-python-dotenv>=1.0.1
-
-pyyaml>=6.0.1
-
-openai>=1.12.0
-rich>=13.7.0
-requests>=2.31.0
-twilio
+fastapi
+uvicorn[standard]
+pydantic
